--- a/homepage/static/ngTemplates/app.homepage.about.html
+++ b/homepage/static/ngTemplates/app.homepage.about.html
@@ -44,7 +44,7 @@
   </div>
 </div>
 <div class="container-fluid no_padding cent_div"style="background-image: linear-gradient(rgba(36, 32, 32, 0.89), rgba(32, 32, 32, 0.84)), url('static/images/24tut/meeting.png');">
-  <div class="col-md-12 text-center" style="padding-top:10rem;">
+  <div class="col-md-12 text-center cent_head">
     <h1 class="heading_big" style="color:#fff;">Our Process</h1>
     <h5 class="heading_small" style="color:#fff;">SIMPLE & EFFICIENT</h5>
   </div>
@@ -130,7 +130,7 @@
     <h1 class="heading_big">eLearny's Testimonials</h1>
     <h5 class="heading_small">WHAT STUDENTS THINK OF US</h5>
   </div>
-  <div class="col-md-8 col-md-offset-2">
+  <div class="col-md-10 col-md-offset-1 hd_screen">
     <div class="col-md-4">
       <div class="container-fluid tell_card">
         <img src="/static/images/24tut/tell1.jpeg" class="tell_abt">
