--- a/homepage/static/ngTemplates/app.homepage.contact.html
+++ b/homepage/static/ngTemplates/app.homepage.contact.html
@@ -79,7 +79,7 @@
 <div class="container-fluid" style="min-height:50vh;background-color:rgba(238, 238, 238, 0.46);position:relative;">
   <img src="/static/images/24tut/bg_left.png" class="bg on_left hidden-xs hidden-sm">
   <img src="/static/images/24tut/bg_right.png" class="bg on_right hidden-xs hidden-sm">
-  <div class="col-md-8 col-md-offset-2" style="margin-top:4em;">
+  <div class="col-md-10 col-md-offset-1 hd_screen" style="margin-top:4em;">
     <div class="col-md-4">
       <img src="/static/images/24tut/istudy.png" class="stu_img">
     </div>
@@ -117,70 +117,70 @@
   </div>
   <div class="col-md-9 col-md-offset-2">
     <div class="row min_padd">
-      <div class="col-md-4 ">
-        <div class="col-md-2 feature_imgs"> <img src="/static/images/24tut/mobile.png" width="100%"></div>
-        <div class="col-md-10">
-        <span class="card_title">Bookmark Fav Courses</span><br>
+      <div class="col-md-4 col-xs-12">
+        <div class="col-md-2 col-xs-3 feature_imgs"> <img src="/static/images/24tut/mobile.png" width="100%"></div>
+        <div class="col-md-10 col-xs-9">
+        <span class="feature_title">Bookmark Fav Courses</span><br>
         <span class="text-muted"> Get the Clear Picture</span>
       </div>
       </div>
-      <div class="col-md-4 ">
-        <div class="col-md-2 feature_imgs"> <img src="/static/images/24tut/operator.png" width="100%"></div>
-        <div class="col-md-10">
-        <span class="card_title">Live Chats</span> <br>
+      <div class="col-md-4 col-xs-12">
+        <div class="col-md-2 col-xs-3 feature_imgs"> <img src="/static/images/24tut/operator.png" width="100%"></div>
+        <div class="col-md-10 col-xs-9">
+        <span class="feature_title">Live Chats</span> <br>
         <span class="text-muted"> Get the Clear Picture</span>
       </div>
       </div>
-      <div class="col-md-4 ">
-        <div class="col-md-2 feature_imgs"> <img src="/static/images/24tut/mobile-app.png" width="100%"></div>
-        <div class="col-md-10">
-        <span class="card_title">App Access</span> <br>
-        <span class="text-muted"> Get the Clear Picture</span>
-      </div>
-      </div>
-    </div>
-    <div class="row min_padd">
-      <div class="col-md-4 ">
-        <div class="col-md-2 feature_imgs"> <img src="/static/images/24tut/laptop.png" width="100%"></div>
-        <div class="col-md-10">
-        <span class="card_title">Video Demonstration</span> <br>
-        <span class="text-muted"> Get the Clear Picture</span>
-      </div>
-      </div>
-      <div class="col-md-4 ">
-        <div class="col-md-2 feature_imgs"> <img src="/static/images/24tut/scholarship.png" width="100%"></div>
-        <div class="col-md-10">
-        <span class="card_title">Varied Syllabus</span> <br>
-        <span class="text-muted"> Get the Clear Picture</span>
-      </div>
-      </div>
-      <div class="col-md-4 ">
-        <div class="col-md-2 feature_imgs"> <img src="/static/images/24tut/student.png" width="100%"></div>
-        <div class="col-md-10">
-        <span class="card_title">Permanent Assets</span> <br>
+      <div class="col-md-4 col-xs-12">
+        <div class="col-md-2 col-xs-3 feature_imgs"> <img src="/static/images/24tut/mobile-app.png" width="100%"></div>
+        <div class="col-md-10 col-xs-9">
+        <span class="feature_title">App Access</span> <br>
         <span class="text-muted"> Get the Clear Picture</span>
       </div>
       </div>
     </div>
     <div class="row min_padd">
-      <div class="col-md-4 ">
-        <div class="col-md-2 feature_imgs"> <img src="/static/images/24tut/quality.png" width="100%"></div>
-        <div class="col-md-10">
-        <span class="card_title">Book Quality</span> <br>
+      <div class="col-md-4 col-xs-12">
+        <div class="col-md-2 col-xs-3 feature_imgs"> <img src="/static/images/24tut/laptop.png" width="100%"></div>
+        <div class="col-md-10 col-xs-9">
+        <span class="feature_title">Video Demonstration</span> <br>
         <span class="text-muted"> Get the Clear Picture</span>
       </div>
       </div>
-      <div class="col-md-4 ">
-        <div class="col-md-2 feature_imgs"> <img src="/static/images/24tut/ppl.png" width="100%"></div>
-        <div class="col-md-10">
-        <span class="card_title">Courses for all Ages</span> <br>
+      <div class="col-md-4 col-xs-12">
+        <div class="col-md-2 col-xs-3 feature_imgs"> <img src="/static/images/24tut/scholarship.png" width="100%"></div>
+        <div class="col-md-10 col-xs-9">
+        <span class="feature_title">Varied Syllabus</span> <br>
         <span class="text-muted"> Get the Clear Picture</span>
       </div>
       </div>
-      <div class="col-md-4 ">
-        <div class="col-md-2 feature_imgs"> <img src="/static/images/24tut/vip.png" width="100%"></div>
-        <div class="col-md-10">
-        <span class="card_title">VIP Membership</span> <br>
+      <div class="col-md-4 col-xs-12">
+        <div class="col-md-2 col-xs-3 feature_imgs"> <img src="/static/images/24tut/student.png" width="100%"></div>
+        <div class="col-md-10 col-xs-9">
+        <span class="feature_title">Permanent Assets</span> <br>
+        <span class="text-muted"> Get the Clear Picture</span>
+      </div>
+      </div>
+    </div>
+    <div class="row min_padd">
+      <div class="col-md-4 col-xs-12">
+        <div class="col-md-2 col-xs-3 feature_imgs"> <img src="/static/images/24tut/quality.png" width="100%"></div>
+        <div class="col-md-10 col-xs-9">
+        <span class="feature_title">Book Quality</span> <br>
+        <span class="text-muted"> Get the Clear Picture</span>
+      </div>
+      </div>
+      <div class="col-md-4 col-xs-12">
+        <div class="col-md-2 col-xs-3 feature_imgs"> <img src="/static/images/24tut/ppl.png" width="100%"></div>
+        <div class="col-md-10 col-xs-9">
+        <span class="feature_title">Courses for all Ages</span> <br>
+        <span class="text-muted"> Get the Clear Picture</span>
+      </div>
+      </div>
+      <div class="col-md-4 col-xs-12">
+        <div class="col-md-2 col-xs-3 feature_imgs"> <img src="/static/images/24tut/vip.png" width="100%"></div>
+        <div class="col-md-10 col-xs-9">
+        <span class="feature_title">VIP Membership</span> <br>
         <span class="text-muted"> Get the Clear Picture</span>
       </div>
       </div>
