--- a/homepage/static/ngTemplates/app.homepage.ncert.html
+++ b/homepage/static/ngTemplates/app.homepage.ncert.html
@@ -6,10 +6,6 @@
   </div>
 </div>
 <div class="container-fluid">
-  <div class="col-md-12 text-center">
-    <h1 class="heading_big">NCERT Solutions</h1>
-    <h3 class="heading_small">NCERT Solutions for Maths & Science Books - FREE PDF Download</h3>
-  </div>
   <div class="col-md-8 col-md-offset-2 min_padd text-center">
     <span style="font-size:1.2em;line-height:1.5;"="heading_small">We provide you the detailed solutions for all questions from NCERT or CBSE text book as per CCE marking scheme pattern, to help you in day to day learning and excel in term end or
       year end examinations conducted by CBSE. NCERT solutions provide detailed, step-by-step solutions to all questions in an NCERT textbook. They are an invaluable aid to students when they need help with their homework, while preparing for exams
@@ -18,7 +14,7 @@
   </div>
 </div>
 <div class="container-fluid">
-  <div class="col-md-10 col-md-offset-1">
+  <div class="col-md-12 col_hd_12">
     <div class="row">
       <div class="col-md-4">
         <div class="container-fluid ncrt_cards">
