--- a/recruitment/static/ngTemplates/app.recruitment.jobs.html
+++ b/recruitment/static/ngTemplates/app.recruitment.jobs.html
@@ -10,13 +10,11 @@
           <div style="margin-top:20px;" ng-include="'/static/ngTemplates/app.recruitment.jobs.form.html'">
           </div>
         </uib-tab>
-        <uib-tab>
+        <!-- <uib-tab>
           <uib-tab-heading>
             Active <i class="fa fa-list-ul"></i>
           </uib-tab-heading>
-          <!-- <div style="margin-top:20px;" ng-include="'/static/ngTemplates/'">
-          </div> -->
-        </uib-tab>
+        </uib-tab> -->
         <uib-tab active="searchTabActive">
           <uib-tab-heading>
             All
