--- a/homepage/static/ngTemplates/app.customer.settings.html
+++ b/homepage/static/ngTemplates/app.customer.settings.html
@@ -32,6 +32,10 @@
     </div>
   </div>
   <div class="row" style="padding-bottom:10px;">
+    <input type="radio" name="" value=""><span>Here</span>
+    <input type="radio" name="" value=""><span>there</span>
+  </div>
+  <div class="row" style="padding-bottom:10px;">
     <div class="col-md-4" style="font-size:20px;">
       <span ><i class="fa  fa-picture-o"></i> &nbsp;<span>Picture</span></span>
     </div>
