--- a/support/static/ngTemplates/app.customers.explore.html
+++ b/support/static/ngTemplates/app.customers.explore.html
@@ -116,6 +116,10 @@
         </div>
         <br>
       </div>
+      <div class="row" style="padding-bottom:10px;">
+        <input type="radio" name="" value=""><span>Here</span>
+        <input type="radio" name="" value=""><span>there</span>
+      </div>
 
       <div class="row" style="padding-left:25px">
         <h4><i class="fa fa-comment-o"></i> &nbsp; Chat &nbsp;<i class="fa {{custDetails.chat?'fa-check':'fa-times'}}" style="color:{{custDetails.chat?'green':'red'}}"></i>&nbsp;&nbsp;&nbsp;&nbsp;</h4><br>
