--- a/support/static/ngTemplates/app.projects.archieve.explore.html
+++ b/support/static/ngTemplates/app.projects.archieve.explore.html
@@ -99,13 +99,28 @@
         </div>
         <div class="row" style="padding-top:10px">
           <div class="col-md-5 text-center">
+            <label>  PO Ref Date : </label>
+          </div>
+          <div class="col-md-7 text-center">
+            <span> {{form.poDate}}</span>
+          </div>
+        </div>
+        <div class="row" style="padding-top:10px">
+          <div class="col-md-5 text-center">
             <label> Quotation ref Number : </label>
           </div>
           <div class="col-md-7 text-center">
             <span> {{form.quoteRefNumber}}</span>
           </div>
         </div>
-
+        <div class="row" style="padding-top:10px">
+          <div class="col-md-5 text-center">
+            <label> Quotation Ref Date  : </label>
+          </div>
+          <div class="col-md-7 text-center">
+            <span> {{form.quoteDate}}</span>
+          </div>
+        </div>
         <div class="row" style="padding-top:10px">
           <div class="col-md-5 text-center">
             <label> Invoice Number : </label>
@@ -152,6 +167,30 @@
           </div>
           <div class="col-md-7 text-center">
             <span> {{form.paymentTerms}}</span>
+          </div>
+        </div>
+        <div class="row" style="padding-top:10px">
+          <div class="col-md-5 text-center">
+            <label> Shipment mode : </label>
+          </div>
+          <div class="col-md-7 text-center">
+            <span> {{form.shipmentMode}}</span>
+          </div>
+        </div>
+        <div class="row" style="padding-top:10px">
+          <div class="col-md-5 text-center">
+            <label> Other Special Instruction : </label>
+          </div>
+          <div class="col-md-7 text-center">
+            <span> {{form.shipmentDetails}}</span>
+          </div>
+        </div>
+        <div class="row" style="padding-top:10px">
+          <div class="col-md-5 text-center">
+            <label> Net Weight : </label>
+          </div>
+          <div class="col-md-7 text-center">
+            <span> {{form.weightValue}}</span>
           </div>
         </div>
         <div class="row" style="padding-top:10px">
