--- a/support/static/ngTemplates/app.projects.junk.explore.html
+++ b/support/static/ngTemplates/app.projects.junk.explore.html
@@ -52,6 +52,7 @@
               <span>  {{form.quote_ref}}</span>
               </div>
             </div>
+
             <div class="row" style="padding-top:10px">
               <div class="col-md-5 text-center">
                   <label> Enquiry Ref : </label>
@@ -99,10 +100,26 @@
         </div>
         <div class="row" style="padding-top:10px">
           <div class="col-md-5 text-center">
+            <label>  PO Ref Date : </label>
+          </div>
+          <div class="col-md-7 text-center">
+            <span> {{form.poDate}}</span>
+          </div>
+        </div>
+        <div class="row" style="padding-top:10px">
+          <div class="col-md-5 text-center">
             <label> Quotation ref Number : </label>
           </div>
           <div class="col-md-7 text-center">
             <span> {{form.quoteRefNumber}}</span>
+          </div>
+        </div>
+        <div class="row" style="padding-top:10px">
+          <div class="col-md-5 text-center">
+            <label> Quotation Ref Date  : </label>
+          </div>
+          <div class="col-md-7 text-center">
+            <span> {{form.quoteDate}}</span>
           </div>
         </div>
 
@@ -152,6 +169,30 @@
           </div>
           <div class="col-md-7 text-center">
             <span> {{form.paymentTerms}}</span>
+          </div>
+        </div>
+        <div class="row" style="padding-top:10px">
+          <div class="col-md-5 text-center">
+            <label> Shipment mode : </label>
+          </div>
+          <div class="col-md-7 text-center">
+            <span> {{form.shipmentMode}}</span>
+          </div>
+        </div>
+        <div class="row" style="padding-top:10px">
+          <div class="col-md-5 text-center">
+            <label> Other Special Instruction : </label>
+          </div>
+          <div class="col-md-7 text-center">
+            <span> {{form.shipmentDetails}}</span>
+          </div>
+        </div>
+        <div class="row" style="padding-top:10px">
+          <div class="col-md-5 text-center">
+            <label> Net Weight : </label>
+          </div>
+          <div class="col-md-7 text-center">
+            <span> {{form.weightValue}}</span>
           </div>
         </div>
         <div class="row" style="padding-top:10px">
