--- a/support/static/ngTemplates/app.inventory.stockcheck.modal.html
+++ b/support/static/ngTemplates/app.inventory.stockcheck.modal.html
@@ -15,9 +15,9 @@
     <th class="text-center">
       Quantity
     </th>
-    <th class="text-center">
+    <!-- <th class="text-center">
       Count
-    </th>
+    </th> -->
     <tr ng-repeat="s in stockdata" >
       <td class="text-center">
         <span>{{s.productPartno}}</span>
@@ -31,14 +31,14 @@
       <td class="text-center">
         <span>{{s.totalqty}}</span>
       </td>
-      <td class="text-center">
+      <!-- <td class="text-center">
         <span><input type='number'  step=1 class="form-control-pos" ng-model='s.count'  ></span>
-      </td>
+      </td> -->
     </tr>
   </table>
 </div>
 <div class="modal-footer">
-  <button class="btn btn-success" ng-click="save()" style="cursor:pointer;">Save</button>
+  <!-- <button class="btn btn-success" ng-click="save()" style="cursor:pointer;">Save</button> -->
   <button class="btn btn-primary" ng-click="prev()" style="cursor:pointer;"><i class="fa fa-arrow-left"></i>Prev</button>
   <button class="btn btn-primary" ng-click="next()" style="cursor:pointer;">Next <i class="fa fa-arrow-right"></i></button>
 </div>
