--- a/support/static/ngTemplates/app.projects.archieve.explore.html
+++ b/support/static/ngTemplates/app.projects.archieve.explore.html
@@ -221,7 +221,7 @@
                 </div><br>
                 <div class="row" ng-if="form.poNumber.length>0||form.projects.length>0||form.data.length>0">
                   <div class="col-md-12 text-center">
-                    <span ><a class="btn btn-primary" target="_blank" href="/api/support/POSlip/?project={{form.pk}}&poNumber={{form.poNumber}}&revision={{form.revision}}&typ=INR" style="min-width:50px"><i
+                    <span ><a class="btn btn-primary" target="_blank" href="/api/support/landingDetail/?project={{form.pk}}" style="min-width:50px"><i
                           class="fa fa-download"></i> Download landing Details </a></span>
                   </div>
                 </div><br>
@@ -283,8 +283,8 @@
           <td>{{v.products.description_1}}<span ng-if="v.products.description_2"> ({{v.products.description_2}})</span></td>
           <td>{{v.customs_no}}</td>
           <td> {{v.quantity1}}</td>
-          <td>{{v.price.toFixed(2)}}</td>
-          <td>{{(v.quantity1*v.price).toFixed(2)}}</td>
+          <td>{{v.price.toFixed(2) | number}}</td>
+          <td>{{(v.quantity1*v.price).toFixed(2) | number}}</td>
         </tr>
         <tr>
           <td></td>
@@ -318,8 +318,8 @@
                   <td>{{m.product.description_1}}<span ng-if="m.product.description_2"> ({{m.product.description_2}})</span></td>
                   <td>{{m.product.part_no}}</td>
                   <td>{{m.qty}}</td>
-                  <td>{{m.price.toFixed(2)}}</td>
-                  <td>{{(m.qty*m.price).toFixed(2)}}</td>
+                  <td>{{m.price.toFixed(2) | number}}</td>
+                  <td>{{(m.qty*m.price).toFixed(2) | number}}</td>
                 </tr>
                 <tr>
                   <td></td>
@@ -353,7 +353,7 @@
                 <label> Ex Work Price: </label>
               </div>
               <div class="col-md-3 text-center">
-                <span>{{(form.invoiceValue).toFixed(2)}}</span>
+                <span>{{(form.invoiceValue).toFixed(2) | number}}</span>
               </div>
               <div class="col-md-3 text-center">
                 <span> {{((form.invoiceValue * form.exRate)).toFixed(2) | number}}</span>
@@ -367,10 +367,10 @@
                 <span>{{form.packing}}</span>
               </div>
               <div class="col-md-3 text-center">
-                <span> {{(form.packing * form.exRate).toFixed(2)}}</span>
+                <span> {{(form.packing * form.exRate).toFixed(2) | number}}</span>
               </div>
               <div class="col-md-2 text-center">
-                <span> {{(form.packing *100/ form.invoiceValue).toFixed(2)}} %</span>
+                <span> {{(form.packing *100/ form.invoiceValue).toFixed(2) | number}} %</span>
               </div>
             </div>
             <div class="row" style="padding-top:10px;border-bottom:1px solid #eeeeee">
@@ -378,10 +378,10 @@
                 <label> Insurance: </label>
               </div>
               <div class="col-md-3 text-center">
-                <span>{{form.insurance}}</span>
+                <span>{{form.insurance | number}}</span>
               </div>
               <div class="col-md-3 text-center">
-                <span> {{(form.insurance * form.exRate).toFixed(2)}}</span>
+                <span> {{(form.insurance * form.exRate).toFixed(2) | number}}</span>
               </div>
               <div class="col-md-2 text-center">
                 <span> {{(form.insurance*100/ form.invoiceValue).toFixed(2)}}% </span>
@@ -392,10 +392,10 @@
                 <label> Freight: </label>
               </div>
               <div class="col-md-3 text-center">
-                <span>{{form.freight}}</span>
+                <span>{{form.freight | number}}</span>
               </div>
               <div class="col-md-3 text-center">
-                <span> {{(form.freight * form.exRate).toFixed(2)}}</span>
+                <span> {{(form.freight * form.exRate).toFixed(2) | number}}</span>
               </div>
               <div class="col-md-2 text-center">
                 <span> {{(form.freight*100/ form.invoiceValue).toFixed(2)}} %</span>
@@ -445,7 +445,7 @@
               <div class="col-md-3 text-center">
               </div>
               <div class="col-md-3 text-center">
-                <span>{{form.clearingCharges1}}</span>
+                <span>{{form.clearingCharges1 | number}}</span>
               </div>
               <div class="col-md-2 text-center">
                 <span> {{(form.clearingCharges1*100/(form.invoiceValue* form.exRate)).toFixed(2)}} %</span>
@@ -458,7 +458,7 @@
               <div class="col-md-3 text-center">
               </div>
               <div class="col-md-3 text-center">
-                <span>{{form.clearingCharges2}}</span>
+                <span>{{form.clearingCharges2 | number}}</span>
               </div>
               <div class="col-md-2 text-center">
                 <span> {{(form.clearingCharges2*100/(form.invoiceValue * form.exRate)).toFixed(2)}} %</span>
