--- a/support/static/ngTemplates/app.projects.junk.explore.html
+++ b/support/static/ngTemplates/app.projects.junk.explore.html
@@ -223,7 +223,7 @@
                 </div><br>
                 <div class="row" ng-if="form.poNumber.length>0||form.projects.length>0||form.data.length>0">
                   <div class="col-md-12 text-center">
-                    <span ><a class="btn btn-primary" target="_blank" href="/api/support/POSlip/?project={{form.pk}}&poNumber={{form.poNumber}}&revision={{form.revision}}&typ=INR" style="min-width:50px"><i
+                    <span ><a class="btn btn-primary" target="_blank" href="/api/support/landingDetail/?project={{form.pk}}" style="min-width:50px"><i
                           class="fa fa-download"></i> Download landing Details </a></span>
                   </div>
                 </div><br>
@@ -285,8 +285,8 @@
           <td>{{v.products.description_1}}<span ng-if="v.products.description_2"> ({{v.products.description_2}})</span></td>
           <td>{{v.customs_no}}</td>
           <td> {{v.quantity1}}</td>
-          <td>{{v.price.toFixed(2)}}</td>
-          <td>{{(v.quantity1*v.price).toFixed(2)}}</td>
+          <td>{{v.price.toFixed(2) | number}}</td>
+          <td>{{(v.quantity1*v.price).toFixed(2) | number}}</td>
         </tr>
         <tr>
           <td></td>
@@ -320,8 +320,8 @@
                   <td>{{m.product.description_1}}<span ng-if="m.product.description_2"> ({{m.product.description_2}})</span></td>
                   <td>{{m.product.part_no}}</td>
                   <td>{{m.qty}}</td>
-                  <td>{{m.price.toFixed(2)}}</td>
-                  <td>{{(m.qty*m.price).toFixed(2)}}</td>
+                  <td>{{m.price.toFixed(2) | number}}</td>
+                  <td>{{(m.qty*m.price).toFixed(2) | number}}</td>
                 </tr>
                 <tr>
                   <td></td>
@@ -366,10 +366,10 @@
                 <label> Packing: </label>
               </div>
               <div class="col-md-3 text-center">
-                <span>{{form.packing}}</span>
+                <span>{{form.packing | number}}</span>
               </div>
               <div class="col-md-3 text-center">
-                <span> {{(form.packing * form.exRate).toFixed(2)}}</span>
+                <span> {{(form.packing * form.exRate).toFixed(2) | number}}</span>
               </div>
               <div class="col-md-2 text-center">
                 <span> {{(form.packing *100/ form.invoiceValue).toFixed(2)}} %</span>
@@ -380,10 +380,10 @@
                 <label> Insurance: </label>
               </div>
               <div class="col-md-3 text-center">
-                <span>{{form.insurance}}</span>
+                <span>{{form.insurance | number}}</span>
               </div>
               <div class="col-md-3 text-center">
-                <span> {{(form.insurance * form.exRate).toFixed(2)}}</span>
+                <span> {{(form.insurance * form.exRate).toFixed(2) | number}}</span>
               </div>
               <div class="col-md-2 text-center">
                 <span> {{(form.insurance*100/ form.invoiceValue).toFixed(2)}}% </span>
@@ -394,10 +394,10 @@
                 <label> Freight: </label>
               </div>
               <div class="col-md-3 text-center">
-                <span>{{form.freight}}</span>
+                <span>{{form.freight | number}}</span>
               </div>
               <div class="col-md-3 text-center">
-                <span> {{(form.freight * form.exRate).toFixed(2)}}</span>
+                <span> {{(form.freight * form.exRate).toFixed(2) | number}}</span>
               </div>
               <div class="col-md-2 text-center">
                 <span> {{(form.freight*100/ form.invoiceValue).toFixed(2)}} %</span>
@@ -413,7 +413,7 @@
                 <!-- <span>{{(form.invoiceValue*form.exRate*(100+form.assessableValueFraction)/100).toFixed(2)}}</span> -->
               </div>
               <div class="col-md-2 text-center">
-                <span>{{form.assessableValue}} %</span>
+                <span>{{form.assessableValue | number}} %</span>
               </div>
             </div>
             <div class="row" style="padding-top:10px;border-bottom:1px solid #eeeeee">
@@ -447,10 +447,10 @@
               <div class="col-md-3 text-center">
               </div>
               <div class="col-md-3 text-center">
-                <span>{{form.clearingCharges1}}</span>
+                <span>{{form.clearingCharges1 | number}}</span>
               </div>
               <div class="col-md-2 text-center">
-                <span> {{(form.clearingCharges1*100/(form.invoiceValue* form.exRate)).toFixed(2)}} %</span>
+                <span> {{(form.clearingCharges1*100/(form.invoiceValue* form.exRate)).toFixed(2) | number}} %</span>
               </div>
             </div>
             <div class="row" style="padding-top:10px;border-bottom:1px solid #eeeeee">
@@ -460,10 +460,10 @@
               <div class="col-md-3 text-center">
               </div>
               <div class="col-md-3 text-center">
-                <span>{{form.clearingCharges2}}</span>
+                <span>{{form.clearingCharges2 | number}}</span>
               </div>
               <div class="col-md-2 text-center">
-                <span> {{(form.clearingCharges2*100/(form.invoiceValue * form.exRate)).toFixed(2)}} %</span>
+                <span> {{(form.clearingCharges2*100/(form.invoiceValue * form.exRate)).toFixed(2) | number}} %</span>
               </div>
             </div>
           </div>
